--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysis.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMT8yWvxIIFCusqfQ4vdChF",
+      "authorship_tag": "ABX9TyP0eKko/VHg3OjDBQkf6QSV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -262,7 +262,7 @@
         "from nltk import PorterStemmer\n",
         "ps = PorterStemmer()"
       ],
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -290,7 +290,7 @@
         "for i in range(len(tokenized_tweet)):\n",
         "    tokenized_tweet[i] = ' '.join(tokenized_tweet[i])"
       ],
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -320,7 +320,7 @@
         "import urllib\n",
         "import requests"
       ],
-      "execution_count": 22,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -333,7 +333,7 @@
       "source": [
         "all_words_positive = ' '.join(text for text in combine['Tidy_Tweets'][combine['label']==0])"
       ],
-      "execution_count": 23,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -346,7 +346,7 @@
       "source": [
         "all_words_positive = ' '.join(text for text in combine['Tidy_Tweets'][combine['label']==1])"
       ],
-      "execution_count": 29,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
         "image_colors = ImageColorGenerator(Mask)\n",
         "wc = WordCloud(background_color='black', height=1500, width=4000,mask=Mask).generate(all_words_positive)"
       ],
-      "execution_count": 30,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -397,7 +397,7 @@
         "\n",
         "    return hashtags"
       ],
-      "execution_count": 32,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -410,7 +410,7 @@
       "source": [
         "ht_positive = Hashtags_Extract(combine['Tidy_Tweets'][combine['label']==0])   "
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
       "source": [
         "ht_positive_unnest = sum(ht_positive,[])"
       ],
-      "execution_count": 34,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -436,7 +436,7 @@
       "source": [
         "ht_negative = Hashtags_Extract(combine['Tidy_Tweets'][combine['label']==1])"
       ],
-      "execution_count": 36,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
       "source": [
         "ht_negative_unnest = sum(ht_negative,[])"
       ],
-      "execution_count": 37,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
       "source": [
         "word_freq_positive = nltk.FreqDist(ht_positive_unnest)"
       ],
-      "execution_count": 38,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -475,7 +475,7 @@
       "source": [
         "df_positive = pd.DataFrame({'Hashtags':list(word_freq_positive.keys()),'Count':list(word_freq_positive.values())})"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -503,7 +503,7 @@
       "source": [
         "word_freq_negative = nltk.FreqDist(ht_negative_unnest)"
       ],
-      "execution_count": 41,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -516,7 +516,7 @@
       "source": [
         "df_negative = pd.DataFrame({'Hashtags':list(word_freq_negative.keys()),'Count':list(word_freq_negative.values())})"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -542,7 +542,201 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from sklearn.feature_extraction.text import CountVectorizer\n",
+        "bow_vectorizer = CountVectorizer(max_df=0.90, min_df=2, max_features=1000, stop_words='english')\n",
+        "bow = bow_vectorizer.fit_transform(combine['Tidy_Tweets'])\n",
+        "df_bow = pd.DataFrame(bow.todense())"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JHLtX2Q8afkF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "tfidf=TfidfVectorizer(max_df=0.90, min_df=2,max_features=1000,stop_words='english')\n",
+        "tfidf_matrix=tfidf.fit_transform(combine['Tidy_Tweets'])\n",
+        "df_tfidf = pd.DataFrame(tfidf_matrix.todense())\n",
+        "df_tfidf"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PXhYn1Ljamgz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_bow = bow[:31962]\n",
+        "train_bow.todense()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-cTN4EGvbT53",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "train_tfidf_matrix = tfidf_matrix[:31962]\n",
+        "train_tfidf_matrix.todense()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ysY25RvkbWr7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "x_train_bow, x_valid_bow, y_train_bow, y_valid_bow = train_test_split(train_bow,train['label'],test_size=0.3,random_state=2)\n",
+        "x_train_tfidf, x_valid_tfidf, y_train_tfidf, y_valid_tfidf = train_test_split(train_tfidf_matrix,train['label'],test_size=0.3,random_state=17)"
+      ],
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a-vmFPiCbxr2",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.metrics import f1_score"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wzMDJ7qpcc-D",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "Log_Reg = LogisticRegression(random_state=0,solver='lbfgs')"
+      ],
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a2O59Delcjoy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Log_Reg.fit(x_train_bow,y_train_bow)\n",
+        "prediction_bow = Log_Reg.predict_proba(x_valid_bow)"
+      ],
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rOA8TdSNcy66",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "prediction_int = prediction_bow[:,1]>=0.3\n",
+        "prediction_int = prediction_int.astype(np.int)\n",
+        "log_bow = f1_score(y_valid_bow, prediction_int)\n",
+        "log_bow"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9yTvef1fdL8A",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Log_Reg.fit(x_train_tfidf,y_train_tfidf)\n",
+        "prediction_tfidf = Log_Reg.predict_proba(x_valid_tfidf)"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SImMUWWxdlIE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "prediction_int = prediction_tfidf[:,1]>=0.3\n",
+        "prediction_int = prediction_int.astype(np.int)\n",
+        "log_tfidf = f1_score(y_valid_tfidf, prediction_int)\n",
+        "log_tfidf"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pBKvx-89doek",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test_tfidf = tfidf_matrix[31962:]\n",
+        "test_pred = Log_Reg.predict_proba(test_tfidf)\n",
+        "test_pred_int = test_pred[:,1] >= 0.3\n",
+        "test_pred_int = test_pred_int.astype(np.int)\n",
+        "test['label'] = test_pred_int\n",
+        "submission = test[['id','label']]"
+      ],
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5mVW5W7derW4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "submission.tail(10)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6zCTqvGxevmX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "combine.tail(10)"
       ],
       "execution_count": null,
       "outputs": []
