--- a/SentimentAnalysisForRacistTweet.ipynb
+++ b/SentimentAnalysisForRacistTweet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysisForRacistTweet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzCt50mHyxMEtmdBOdF4Dx",
+      "authorship_tag": "ABX9TyO8pbQ9Et78Fg0CnTxULA75",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4338,7 +4338,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "Log_Reg = LogisticRegression(random_state=41,solver='lbfgs')"
       ],
-      "execution_count": 70,
+      "execution_count": 88,
       "outputs": []
     },
     {
@@ -4361,12 +4361,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "add4a9f5-689d-424f-a395-3ba030276cf7"
+        "outputId": "5a80e7d3-0fc0-469d-8952-814e7a905055"
       },
       "source": [
         "Log_Reg.fit(x_train_bow,y_train_bow)"
       ],
-      "execution_count": 71,
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4382,7 +4382,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 71
+          "execution_count": 89
         }
       ]
     },
@@ -4405,13 +4405,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 134
         },
-        "outputId": "b719912e-e853-41d2-e74b-2d6f6cef6bbd"
+        "outputId": "a3da2746-cc25-4ae9-ce1e-569f722ee72f"
       },
       "source": [
         "prediction_bow = Log_Reg.predict_proba(x_valid_bow)\n",
         "prediction_bow"
       ],
-      "execution_count": 73,
+      "execution_count": 90,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4429,50 +4429,54 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 73
+          "execution_count": 90
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yImw1XTUnuGT",
+        "id": "Z8H92TyOv0Nr",
         "colab_type": "text"
       },
       "source": [
-        "Calculating the F1 Score"
+        "Calculating the Accuracy"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HzZ7rWq9mTz8",
+        "id": "6irY_cERw8bs",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 185
         },
-        "outputId": "ab477995-5d6a-47e1-fb0b-4c389b7bbd87"
+        "outputId": "f23e5919-2f08-481e-f877-48f19b3bcc03"
       },
       "source": [
-        "prediction_int = prediction_bow[:,1]>=0.3\n",
-        "prediction_int = prediction_int.astype(np.int)\n",
-        "log_bow = f1_score(y_valid_bow, prediction_int)\n",
-        "log_bow"
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_bow,prediction_int))\n",
+        "print(accuracy_score(y_valid_bow,prediction_int))"
       ],
-      "execution_count": 74,
+      "execution_count": 100,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.539815590947192"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 74
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.98      0.97      8903\n",
+            "           1       0.64      0.47      0.54       686\n",
+            "\n",
+            "    accuracy                           0.94      9589\n",
+            "   macro avg       0.80      0.72      0.75      9589\n",
+            "weighted avg       0.94      0.94      0.94      9589\n",
+            "\n",
+            "0.9427468974867035\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -4496,12 +4500,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 101
         },
-        "outputId": "8a1ac2ca-bb4e-4f76-fd18-9eecaed0fc7d"
+        "outputId": "e6ee1bc7-2099-4a8d-87b8-98bb3e886515"
       },
       "source": [
         "Log_Reg.fit(x_train_tfidf,y_train_tfidf)"
       ],
-      "execution_count": 75,
+      "execution_count": 101,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4517,7 +4521,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 75
+          "execution_count": 101
         }
       ]
     },
@@ -4540,13 +4544,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 134
         },
-        "outputId": "684c6071-97c6-4484-912f-7d688d4dff63"
+        "outputId": "5b51aa70-35b7-428e-dbea-85e8dd4e7d8a"
       },
       "source": [
         "prediction_tfidf = Log_Reg.predict_proba(x_valid_tfidf)\n",
         "prediction_tfidf"
       ],
-      "execution_count": 76,
+      "execution_count": 102,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4564,7 +4568,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 76
+          "execution_count": 102
         }
       ]
     },
@@ -4575,39 +4579,43 @@
         "colab_type": "text"
       },
       "source": [
-        "Calculating the F1 Score"
+        "Calculating the Accuracy"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EV1ZI17LmtlU",
+        "id": "lIv48msxy5mA",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 185
         },
-        "outputId": "2f75c161-bc55-4123-fc85-3db178eecd0c"
+        "outputId": "8fb730f8-83fd-4b59-8b2e-02a97c9886db"
       },
       "source": [
-        "prediction_int = prediction_tfidf[:,1]>=0.3\n",
-        "prediction_int = prediction_int.astype(np.int)\n",
-        "log_tfidf = f1_score(y_valid_tfidf, prediction_int)\n",
-        "log_tfidf"
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_tfidf,prediction_int))\n",
+        "print(accuracy_score(y_valid_tfidf,prediction_int))"
       ],
-      "execution_count": 77,
+      "execution_count": 104,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5445026178010471"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 77
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.98      0.97      8903\n",
+            "           1       0.68      0.45      0.54       686\n",
+            "\n",
+            "    accuracy                           0.95      9589\n",
+            "   macro avg       0.82      0.72      0.76      9589\n",
+            "weighted avg       0.94      0.95      0.94      9589\n",
+            "\n",
+            "0.9455626238398165\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -4632,7 +4640,7 @@
         "from sklearn.tree import DecisionTreeClassifier\n",
         "dct = DecisionTreeClassifier(criterion='entropy', random_state=41)"
       ],
-      "execution_count": 78,
+      "execution_count": 105,
       "outputs": []
     },
     {
@@ -4655,12 +4663,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 118
         },
-        "outputId": "aa8a8e65-f1b6-44ea-d4cf-2999053f2953"
+        "outputId": "1d5ccccf-ac7b-4e2a-ba6b-787d13b78a78"
       },
       "source": [
         "dct.fit(x_train_bow,y_train_bow)"
       ],
-      "execution_count": 79,
+      "execution_count": 106,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4677,7 +4685,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 79
+          "execution_count": 106
         }
       ]
     },
@@ -4700,13 +4708,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 134
         },
-        "outputId": "14fb050d-fee4-4a2a-a2df-2cf055707d99"
+        "outputId": "d0fae3e5-ab9f-4c9c-b7c5-097885d3b144"
       },
       "source": [
         "dct_bow = dct.predict_proba(x_valid_bow)\n",
         "dct_bow"
       ],
-      "execution_count": 80,
+      "execution_count": 107,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4724,7 +4732,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 80
+          "execution_count": 107
         }
       ]
     },
@@ -4735,39 +4743,43 @@
         "colab_type": "text"
       },
       "source": [
-        "Calculating the F1 Score"
+        "Calculating the Accuracy"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RdBCJkKmncVG",
+        "id": "iNqSlyLnzWHB",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 185
         },
-        "outputId": "28d72f7f-7ed8-4978-d28a-c4a20055eb7b"
+        "outputId": "5a2c39f4-d91c-40f7-9109-5c5ef3da861a"
       },
       "source": [
-        "dct_bow=dct_bow[:,1]>=0.3\n",
-        "dct_int_bow=dct_bow.astype(np.int)\n",
-        "dct_score_bow=f1_score(y_valid_bow,dct_int_bow)\n",
-        "dct_score_bow"
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_bow,dct_int_bow))\n",
+        "print(accuracy_score(y_valid_bow,dct_int_bow))"
       ],
-      "execution_count": 81,
+      "execution_count": 109,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.48703352308665404"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 81
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.97      0.94      0.95      8903\n",
+            "           1       0.43      0.56      0.49       686\n",
+            "\n",
+            "    accuracy                           0.92      9589\n",
+            "   macro avg       0.70      0.75      0.72      9589\n",
+            "weighted avg       0.93      0.92      0.92      9589\n",
+            "\n",
+            "0.9154239232453854\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -4791,12 +4803,12 @@
           "base_uri": "https://localhost:8080/",
           "height": 118
         },
-        "outputId": "104b2210-43d8-4b7c-d1da-df0351595621"
+        "outputId": "2c0d4bd2-cf82-40b1-f41d-df600076ad2d"
       },
       "source": [
         "dct.fit(x_train_tfidf,y_train_tfidf)"
       ],
-      "execution_count": 82,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4813,7 +4825,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
+          "execution_count": 110
         }
       ]
     },
@@ -4836,13 +4848,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 134
         },
-        "outputId": "32008c16-d584-44cc-95f1-6c82b48f22f6"
+        "outputId": "d3cca22c-b162-493f-e773-3375e154b43e"
       },
       "source": [
         "dct_tfidf = dct.predict_proba(x_valid_tfidf)\n",
         "dct_tfidf"
       ],
-      "execution_count": 83,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4860,7 +4872,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 83
+          "execution_count": 111
         }
       ]
     },
@@ -4871,40 +4883,54 @@
         "colab_type": "text"
       },
       "source": [
-        "Calculating the F1 Score"
+        "Calculating the Accuracy"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "74BfGL0Dn5KZ",
+        "id": "Ly8H4r1bz2M7",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 185
         },
-        "outputId": "bf4e6174-0b51-440b-8638-8b1a03061189"
+        "outputId": "125aeeb9-6549-4fda-8eb4-399278115f62"
       },
       "source": [
-        "dct_tfidf=dct_tfidf[:,1]>=0.3\n",
-        "dct_int_tfidf=dct_tfidf.astype(np.int)\n",
-        "dct_score_tfidf=f1_score(y_valid_tfidf,dct_int_tfidf)\n",
-        "dct_score_tfidf"
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_tfidf,dct_int_tfidf))\n",
+        "print(accuracy_score(y_valid_tfidf,dct_int_tfidf))"
       ],
-      "execution_count": 84,
+      "execution_count": 113,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.5273159144893113"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 84
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.97      0.97      8903\n",
+            "           1       0.58      0.49      0.53       686\n",
+            "\n",
+            "    accuracy                           0.94      9589\n",
+            "   macro avg       0.77      0.73      0.75      9589\n",
+            "weighted avg       0.93      0.94      0.94      9589\n",
+            "\n",
+            "0.9377411617478361\n"
+          ],
+          "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EZVKMD3Y0a-O",
+        "colab_type": "text"
+      },
+      "source": [
+        "# ***`Highest Accuracy with Logistic Regression TF-IDF 0.9455626238398165`***"
       ]
     }
   ]
