--- a/SentimentAnalysisForRacistTweet.ipynb
+++ b/SentimentAnalysisForRacistTweet.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysisForRacistTweet.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqwe5GNbGlUW0K/V9ZFEWe",
+      "authorship_tag": "ABX9TyMJNe0tezMnL5ixh3fwSOHA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4941,13 +4941,410 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1gc6ZmIEAFQa"
+        "id": "1gc6ZmIEAFQa",
+        "outputId": "4a6f45d8-b00b-4169-a210-2677a62de01c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
       },
       "source": [
-        ""
+        "from sklearn.svm import SVC\n",
+        "svm = SVC(kernel='linear', random_state=0)  \n",
+        "svm.fit(x_train_bow, y_train_bow) "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+              "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='linear',\n",
+              "    max_iter=-1, probability=False, random_state=0, shrinking=True, tol=0.001,\n",
+              "    verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 116
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sWOfEF6oCXFJ",
+        "outputId": "0625fa48-5817-4de5-b9aa-a20539573611",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "prediction_bow = svm.predict(x_valid_bow)  \n",
+        "prediction_bow"
+      ],
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, ..., 0, 0, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 117
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZBB-LOqwCswY",
+        "outputId": "1c432225-e0ea-40d6-a925-974f4770460d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        }
+      },
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_bow,prediction_bow))\n",
+        "print(accuracy_score(y_valid_bow,prediction_bow))"
+      ],
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.95      0.99      0.97      8903\n",
+            "           1       0.77      0.36      0.49       686\n",
+            "\n",
+            "    accuracy                           0.95      9589\n",
+            "   macro avg       0.86      0.67      0.73      9589\n",
+            "weighted avg       0.94      0.95      0.94      9589\n",
+            "\n",
+            "0.9465011992908541\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8QOGhajwFe42",
+        "outputId": "db6a0606-f2c8-41e4-858f-43b2ac7e2b1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        }
+      },
+      "source": [
+        "from sklearn.svm import SVC\n",
+        "svm = SVC(kernel='linear', random_state=0)  \n",
+        "svm.fit(x_train_tfidf, y_train_tfidf) "
+      ],
+      "execution_count": 128,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "SVC(C=1.0, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+              "    decision_function_shape='ovr', degree=3, gamma='scale', kernel='linear',\n",
+              "    max_iter=-1, probability=False, random_state=0, shrinking=True, tol=0.001,\n",
+              "    verbose=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 128
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kPsBRKPbF0z5",
+        "outputId": "97734ff0-1349-4a06-aa18-190971a92c93",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "prediction_tfidf = svm.predict(x_valid_tfidf)  \n",
+        "prediction_tfidf"
+      ],
+      "execution_count": 129,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, ..., 0, 0, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 129
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NmZL1xymF6K8",
+        "outputId": "e2757e4d-5bec-490c-c6ca-0aad01ba3f98",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        }
+      },
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_tfidf,prediction_tfidf))\n",
+        "print(accuracy_score(y_valid_tfidf,prediction_tfidf))"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.95      0.99      0.97      8903\n",
+            "           1       0.80      0.33      0.47       686\n",
+            "\n",
+            "    accuracy                           0.95      9589\n",
+            "   macro avg       0.88      0.66      0.72      9589\n",
+            "weighted avg       0.94      0.95      0.94      9589\n",
+            "\n",
+            "0.9463969131296277\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1L_aFLxAF_4k",
+        "outputId": "24b61c64-78d0-42bb-c355-c41b27a2762b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 151
+        }
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier  \n",
+        "rfc = RandomForestClassifier(n_estimators= 10, criterion=\"entropy\")  \n",
+        "rfc.fit(x_train_bow, y_train_bow)  "
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+              "                       criterion='entropy', max_depth=None, max_features='auto',\n",
+              "                       max_leaf_nodes=None, max_samples=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+              "                       n_jobs=None, oob_score=False, random_state=None,\n",
+              "                       verbose=0, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 122
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eNJnUT5SIaGv",
+        "outputId": "c319f253-9940-432a-d022-5a6dbf26a461",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "prediction_bow = rfc.predict(x_valid_bow)  \n",
+        "prediction_bow"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, ..., 0, 0, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6peLOcJTImay",
+        "outputId": "83158beb-4706-4216-f749-22ebd94de932",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        }
+      },
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_bow,prediction_bow))\n",
+        "print(accuracy_score(y_valid_bow,prediction_bow))"
+      ],
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.97      0.97      8903\n",
+            "           1       0.59      0.51      0.55       686\n",
+            "\n",
+            "    accuracy                           0.94      9589\n",
+            "   macro avg       0.78      0.74      0.76      9589\n",
+            "weighted avg       0.94      0.94      0.94      9589\n",
+            "\n",
+            "0.9394097403274585\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zoPOTo0AItX6",
+        "outputId": "f09860cd-d1fd-4060-dfdd-654677d596cf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 151
+        }
+      },
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier  \n",
+        "rfc = RandomForestClassifier(n_estimators= 10, criterion=\"entropy\")  \n",
+        "rfc.fit(x_train_tfidf, y_train_tfidf)  "
+      ],
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+              "                       criterion='entropy', max_depth=None, max_features='auto',\n",
+              "                       max_leaf_nodes=None, max_samples=None,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, n_estimators=10,\n",
+              "                       n_jobs=None, oob_score=False, random_state=None,\n",
+              "                       verbose=0, warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 125
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PLk746JLIzfD",
+        "outputId": "6ba44c88-a1d2-4c33-9007-49520c759f44",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "prediction_tfidf = rfc.predict(x_valid_tfidf)  \n",
+        "prediction_tfidf"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 0, 0, ..., 0, 0, 0])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tES3tjvLJBsI",
+        "outputId": "338d2721-b46a-403a-c731-0d98de7eda6b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 185
+        }
+      },
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "print(classification_report(y_valid_tfidf,prediction_tfidf))\n",
+        "print(accuracy_score(y_valid_tfidf,prediction_tfidf))"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.99      0.97      8903\n",
+            "           1       0.78      0.43      0.55       686\n",
+            "\n",
+            "    accuracy                           0.95      9589\n",
+            "   macro avg       0.87      0.71      0.76      9589\n",
+            "weighted avg       0.94      0.95      0.94      9589\n",
+            "\n",
+            "0.9502555010950047\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
